<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>filters_ukf_example</name>
  <version>0.0.0</version>
  <description>ROS 2 package containing example UKF state estimation filter for BlueROV2.</description>
  <maintainer email="marinarasauced@outlook.com">marinarasauced</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>filters_msgs</depend>
  <depend>filters_ukf_core</depend>
  <depend>sensor_msgs</depend>
  <depend>Eigen3</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
